--- a/components/.postTemplates.html
+++ b/components/.postTemplates.html
@@ -32,6 +32,44 @@
 </section>
 
 
+<!--copy post-->
+<div class="project__media project_copy fullheight lazy-container" data-src=""
+data-final-width="0" data-width="600" data-height="1000"
+style="width: 600px; padding-right: 1rem; background:#fff;">
+<p>
+	Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+	incididunt ut labore et dolore magna aliqua. Eget nunc scelerisque viverra mauris
+	in. Quis imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. Eu
+	tincidunt tortor aliquam nulla facilisi cras. In est ante in nibh mauris cursus
+	mattis molestie. Id leo in vitae turpis massa. Et netus et malesuada fames ac turpis
+	egestas. Bibendum neque egestas congue quisque egestas diam. Ultrices in iaculis
+	nunc sed. Suspendisse potenti nullam ac tortor. Nullam vehicula ipsum a arcu. Mauris
+	commodo quis imperdiet massa tincidunt nunc pulvinar sapien.</p><br />
+<p>
+	Nulla posuere sollicitudin aliquam ultrices sagittis orci a. Fames ac turpis egestas
+	maecenas pharetra convallis posuere. Bibendum enim facilisis gravida neque convallis
+	a cras semper auctor. Eget arcu dictum varius duis at consectetur. Risus viverra
+	adipiscing at in tellus integer feugiat scelerisque. Accumsan tortor posuere ac ut
+	consequat. Lacus viverra vitae congue eu consequat ac felis donec et. Et netus et
+	malesuada fames ac turpis egestas. Adipiscing bibendum est ultricies integer quis
+	auctor elit sed. Vulputate dignissim suspendisse in est. In iaculis nunc sed augue
+	lacus viverra vitae congue eu. Posuere ac ut consequat semper. Pellentesque elit
+	ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at. Senectus et netus
+	et malesuada fames. Sed vulputate mi sit amet. Tincidunt dui ut ornare lectus sit
+	amet est placerat.</p><br />
+<p>
+	Cum sociis natoque penatibus et magnis dis parturient montes. Neque viverra justo
+	nec
+	ultrices dui sapien eget mi proin. Quis imperdiet massa tincidunt nunc pulvinar
+	sapien. Eu facilisis sed odio morbi. Cursus risus at ultrices mi tempus. Semper
+	viverra nam libero justo laoreet sit amet. Commodo viverra maecenas accumsan lacus
+	vel facilisis volutpat est velit. Tristique nulla aliquet enim tortor at auctor
+	urna. Faucibus ornare suspendisse sed nisi lacus sed. Faucibus pulvinar elementum
+	integer enim. Pharetra diam sit amet nisl suscipit adipiscing bibendum est.</p>
+<br />
+</div>
+
+
 <!--expanded figma embed-->
 <div class="project__media fullheight lazy-container"
 	data-src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FOuM2PfXtGLWYGnUiOAN9c7%2FMobile-Design-Studio%3Fpage-id%3D27%253A25905%26node-id%3D231-27650%26viewport%3D1296%252C989%252C0.25%26scaling%3Dscale-down%26starting-point-node-id%3D231%253A27650"
